--- a/kurento-one2one-call/src/main/resources/static/css/kurento.css
+++ b/kurento-one2one-call/src/main/resources/static/css/kurento.css
@@ -78,3 +78,11 @@ div.dragged {
 	border-color: blue !important;
 	z-index: 10 !important;
 }
+
+li.user-name {
+	cursor: pointer;
+}
+
+li.user-name:hover {
+	background-color: rgba(40, 96, 144, 0.15);
+}
